# memory-reach

./: README.md  pyproject.toml
docs/: install.md  openclaw-hook-example.md  openclaw-hook.md  update.md
memory_reach/: cli.py
memory_reach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: openclaw_capture.py
templates/: MEMORY.md
templates/daily/: example-day.md
templates/projects/: example-project.md
templates/rules/: memory-rules.md  privacy-rules.md  retention.md
